@@ -10,13 +10,13 @@ JDK_CHANGESET = 483d8dacfbd8
 LANGTOOLS_CHANGESET = 0df09c966a29
 OPENJDK_CHANGESET = 3defd24c2671
 
-CORBA_SHA256SUM = da786a16483ba20113f570284c242cfede65e76e6c8911ad4a238cdc33cbf48d
-HOTSPOT_SHA256SUM = 0d5e9b17972e5688e1ec176c25d0055047ed198a804906bcc4cf9993c9a6c118
-JAXP_SHA256SUM = f8416413f66a5b49214b582391c0a00a2ff9487c42965f37e63fd48a89eedb1d
-JAXWS_SHA256SUM = 54803ffb5f4badb119c488bc90670661fd9c7049f32ae94668c38bf85e709047
-JDK_SHA256SUM = aa99e5b5e3ee7cb7bf94e90b2fb1bd45382548d620614acbb6621234698b7929
-LANGTOOLS_SHA256SUM = 991fc492c08a51163dd54c3cd247764f1b3986a88a77042c137a5a0c1fac4b1e
-OPENJDK_SHA256SUM = 653d459911cae04907adeb1c1c5926c0ff1d874127ad16d72324cba63975f57b
+CORBA_SHA256SUM = 7589c42e88b4342750bea5afa306cc662cc9c5f7607fad96f70083ce70f4526e
+HOTSPOT_SHA256SUM = b65f1a202851c5db98507477099639354fb536f51b7ce0fb2b8251eb377de328
+JAXP_SHA256SUM = 6ab0cab1965edb28e4093b55436abd04fbffe0b0251016043c75246c4ee9dc2d
+JAXWS_SHA256SUM = 5567c90ce2857016365b2e346783a3b16ec0e76b80586a0371f601b4fed01f21
+JDK_SHA256SUM = c698a60613673bfc2e25d7b4d163b192116d5ce7d1a1fb63a1c6349686ce30d7
+LANGTOOLS_SHA256SUM = 0118daf4d280d0a56f657fac640ac191ec42a7f49cc12a0693bd0fdd04ec684a
+OPENJDK_SHA256SUM = 4043a75c2c4385dd735f8dbbf2369311ce1b951217c9dbe9bba9609e24eb291e
 
 CACAO_VERSION = d6264eb66506
 CACAO_SHA256SUM = 94ea7899e806ccbc33a732b5113a8f969d8b1f4ce7ffd27cf04577054f65f63c
